--- a/src/index.html
+++ b/src/index.html
@@ -20,8 +20,8 @@
   
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-  <link rel="apple-touch-icon" href="icons/apple-touch-icon.png">
-  <link rel="icon" href="icons/favicon.png">
+  <link rel="apple-touch-icon" href="icons/app-icon.png">
+  <link rel="icon" href="icons/app-icon.png">
   
   
   <!-- built styles file will be auto injected -->
@@ -29,6 +29,7 @@
 <body>
   <div id="app"></div>
   
+  <script src="js/capacitor-bridge.umd.js"></script>
   <script type="module" src="./js/app.js"></script>
 </body>
 </html>
